# pyevtx-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  azure-pipelines.yml  build_pgo.sh  evtx.pyi  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-wheels.yml
notebooks/: wevt_templates_e2e.ipynb
python/evtx/: __init__.py  __init__.pyi  _native.pyi
python/evtx/wevt/: __init__.py  __init__.pyi
scripts/: evtx_dump.py
src/: doc.rs  file_like.rs  lib.rs  parser.rs  py_err.rs  pyevtx.rs  records.rs  wevt_cache.rs  wevt_manifest.rs
tests/: conftest.py  test_parser.py  test_pyevtx.py  test_wevt_cache.py  test_wevt_manifest.py
