[package]
name = "evtx_py"
description = "Python bindings for https://github.com/omerbenamram/evtx"
version = "0.8.4"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "evtx"
crate-type = ["cdylib"]

[dependencies]
evtx_rs = { version = "0.8.2", default-features = false, features = [
    "multithreading",
], package = "evtx" }
encoding = "0.2"
pyo3 = { version = "0.21.1", features = ["extension-module", "abi3-py37"] }
pyo3-file = "0.8.0"
