[package]
name = "evtx_py"
description = "Python bindings for https://github.com/omerbenamram/evtx"
version = "0.8.9"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "evtx"
crate-type = ["cdylib", "rlib"]

[dependencies]
evtx_rs = { path = "../..", default-features = false, features = [
    "multithreading",
], package = "evtx" }
encoding = "0.2"
pyo3 = { version = "0.26.0", features = ["abi3-py310"] }
pyo3-file = "0.14.0"
serde_json = "1"
bumpalo = "3"
pyo3-stub-gen = "0.17"

[features]
default = ["wevt_templates", "extension-module"]
wevt_templates = ["evtx_rs/wevt_templates"]
extension-module = ["pyo3/extension-module"]

[[bin]]
name = "stub_gen"
doc = false
